<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#7E9C9F"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="32sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/userNameEditText"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#7E9C9F"
        android:textColorHint="@color/white"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userNameEditText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="#7E9C9F"
        android:textColorHint="@color/white"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guestLogin"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/guestLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:onClick="loginAsGuest"
        android:text="@string/guestLoginButton"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/normalLogin"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/normalLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:onClick="normalLogin"
        android:text="@string/normalLogin"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/guestLogin" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:onClick="register"
        android:text="@string/register"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normalLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>